<resources>
    <string name="app_name">Sale Hunter</string>
    <string name="facebook_app_id">FACEBOOK_APP_ID</string>
    <string name="fb_login_protocol_scheme">fb1050752855727748</string>
    <string name="google_backend_id">GOOGLE_BACKEND_ID</string>
    <string name="google_map_api_key">GOOGLE_MAP_API_KEY</string>
    <string name="app_font"><![CDATA[@font/raleway_regular]]></string>
    <string name="currency">LE</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="Settings">Settings</string>
    <string name="language">Language</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="app_version">v0.0.0</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_store">My Store</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="user_name">User Name</string>
    <string name="account_type">Account Type</string>
    <string name="scanning">Scanning</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="detecting_product">Detecting Product ...</string>
    <string name="try_again">Try Again</string>
    <string name="sale_hunter_website">Sale Hunter Website</string>
    <string name="basic_info">Basic Info</string>
    <string name="product_images">Product Images</string>
    <string name="meta_data">Meta Data</string>
    <string name="whatsapp_available_for_this_phone">Whatsapp Available For This Phone</string>
    <string name="create_my_store">Create My Store</string>
    <string name="store_name">Store Name</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="press_add_button_to_get_started">Press Add Button to get started</string>
    <string name="you_re_offline">You\'re Offline !</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="close">Close</string>
    <string name="message_info_text">Message Info Text</string>
    <string name="message_title">Message Title</string>
    <string name="verify">Verify</string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_list_is_empty">Favorite List is Empty</string>
    <string name="please_enter_your_registered_e_mail_to_send_you_a_verification_code">Please enter your registered e-mail to send you a verification code</string>
    <string name="send_code">Send Code</string>
    <string name="history">History</string>
    <string name="views_history_is_empty">Views History is Empty</string>
    <string name="search">Search</string>
    <string name="on_sale">On Sale</string>
    <string name="my_fav">My Fav.</string>
    <string name="loading">Loading ...</string>
    <string name="dialog_sub_title">Dialog Sub Title</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="change_password">Change Password</string>
    <string name="please_confirm_the_old_password_then_enter_the_new_one">Please confirm the old password then enter the new one</string>
    <string name="save">Save</string>
    <string name="brand">Brand</string>
    <string name="iphone_13_single_sim_with_facetime_128gb_starlight">IPhone 13 Single SIM With FaceTime - 128GB - Starlight</string>
    <string name="sale">SALE</string>
    <string name="add">Add</string>
    <string name="product_store_page">Product Store Page</string>
    <string name="get_directions_to_store">Get Directions to store</string>
    <string name="store_location">Store Location</string>
    <string name="price_tracker">Price Tracker</string>
    <string name="rate_product">Rate Product</string>
    <string name="submit">Submit</string>
    <string name="edit_profile_on_social">Edit Profile On Social</string>
    <string name="please_create_a_new_password_for_your_account">Please create a new password for your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="recommended">Recommended</string>
    <string name="keyword">Keyword</string>
    <string name="stock_locations">Stock Locations</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="best_deal">Best Deal</string>
    <string name="rating">Rating</string>
    <string name="nearest_local_store">Nearest Local Store</string>
    <string name="updated_recently">Updated Recently</string>
    <string name="filter_by">Filter By</string>
    <string name="price">Price:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="all_products">All Products</string>
    <string name="apply">Apply</string>
    <string name="products">Products</string>
    <string name="there_are_no_products">There are no products</string>
    <string name="this_page_is_nunder_construction">This Page is\nUnder Construction</string>
    <string name="please_enter_the_code_which_is_sent_to_your_e_mail_inbox">Please enter the code which is sent to your e-mail inbox</string>
    <string name="no_results_found">No Results Found</string>
    <string name="unfortunately_there_are_no_products">Unfortunately There are No Products</string>
    <string name="online_stores">Online Stores</string>
    <string name="create_your_store_for_free_and_add_this_product">Create your Store for Free and Add This Product</string>
    <string name="find_products_easily">Find Products Easily</string>
    <string name="search_for_any_product_to_get_its_price_in_market_and_nearest_stores_that_selling_it">Search for any product to get its price in market and nearest stores that selling it</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_arabic">Product Name Arabic</string>
    <string name="category_arabic">Category Arabic</string>
    <string name="description">Description</string>
    <string name="description_arabic">Description Arabic</string>
    <string name="address">Address</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="website_link_optional">Website Link (Optional)</string>
    <string name="facebook_username_optional">Facebook Username (Optional)</string>
    <string name="instagram_username_optional">Instagram Username (Optional)</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_for_product">Search For Product ...</string>
    <string name="About">About</string>
    <string name="Session_Expired">Session Expired !</string>
    <string name="You_are_signed_out_for_account_security">You are signed out for account security\nPlease sign in again.</string>
    <string name="Start_Now">Start Now</string>
    <string name="intro_title_1">Find Products Easily</string>
    <string name="intro_title_2">Cashier in Your Pocket</string>
    <string name="intro_title_3">Hunt The Best Deals</string>
    <string name="intro_title_4">Have a Store ?</string>
    <string name="intro_description_1">Search for any product to get its price in market and location of nearest stores that selling it</string>
    <string name="intro_description_2">Scan any product barcode to get it\'s price and info instantly in few clicks using your phone</string>
    <string name="intro_description_3">Find best price and don\'t miss any discounts or price drops on your favourite products</string>
    <string name="intro_description_4">Get rid of creating website costs and efforts we help you reach more customers for free</string>
    <string name="product">Product</string>
    <string name="free">Free</string>
    <string name="Not_a_valid_price">Not a valid price</string>
    <string name="Product_Name_length_should_be_between">Product Name length should be between</string>
    <string name="Not_valid_name">Not valid name</string>
    <string name="Product_Name_length_should_be_between_8_and_64">Product Name length should be between 8 and 64</string>
    <string name="Category_length_should_be_between">Category length should be between</string>
    <string name="Brand_length_should_be_between">Brand length should be between </string>
    <string name="Description_length_should_be_between">Description length should be between </string>
    <string name="Update_Product">Update Product</string>
    <string name="Delete_Product">Delete Product</string>
    <string name="Are_you_sure_that_you_want_to_delete_this_product">Are you sure that you want to delete this product?</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="Create_Product">Create Product</string>
    <string name="Image_is_Required">Image is Required</string>
    <string name="Server_Error">Server Error</string>
    <string name="Code">"Code: "</string>
    <string name="Store">Store</string>
    <string name="Store_Name_length_should_be_between">Store Name length should be between </string>
    <string name="Address_length_should_be_between">Address length should be between </string>
    <string name="Phone_Number_digits_should_be">Phone Number digits should be </string>
    <string name="digit">" digit"</string>
    <string name="Not_valid_website_URL">Not valid website URL</string>
    <string name="Not_valid_facebook_username">Not valid facebook username</string>
    <string name="Not_valid_instagram_username">Not valid instagram username</string>
    <string name="GPS_Location_Required">GPS Location Required</string>
    <string name="Please_use_gps_button_first_to_get_accurate_store_location_then_you_can_edit_address_if_needed">Please use gps button first to get accurate store location then you can edit address if needed.</string>
    <string name="Update_Store">Update Store</string>
    <string name="Create_Store">Create Store</string>
    <string name="store_intro_title_1">Do You Have A Store?</string>
    <string name="store_intro_title_2">Create a Store Page</string>
    <string name="store_intro_title_3">Reach More Customers</string>
    <string name="store_intro_title_4">Even if you have website !</string>
    <string name="store_intro_description_1">Get rid of creating website costs and efforts we help you go online easily</string>
    <string name="store_intro_description_2">get a page for your store and showcase your products totally free in few steps</string>
    <string name="store_intro_description_3"><![CDATA[We will help customers find you easier so your store can grow & get more popularity]]></string>
    <string name="main_settings">Main Settings</string>
    <string name="theme">Theme</string>
</resources>