<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".view.fragment.main.SettingsFragment">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/theme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:outlineSpotShadowColor="@color/accent"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/autoThemeImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/auto_mode_preview" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:outlineSpotShadowColor="@color/accent"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/lightThemeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:scaleType="centerCrop"
                    android:src="@drawable/light_mode_preview" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:outlineSpotShadowColor="@color/accent"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/darkThemeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dark_mode_preview" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/settings_ThemeRadioButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/autoThemeButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="0" />

                <RadioButton
                    android:id="@+id/lightThemeButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="90dp"
                    android:layout_weight="0" />

                <RadioButton
                    android:id="@+id/darkThemeButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="0" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/autoThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/auto" />

            <TextView
                android:id="@+id/lightThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/light" />

            <TextView
                android:id="@+id/darkThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/dark" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        tools:listitem="@layout/settings_list_item_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>