<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet_dialog_background"
    tools:context=".view.fragment.dialogs.EmailVerificationDialog">

    <TextView
        android:id="@+id/emailVerificationDialogSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/message_info_text"
        android:textAlignment="center"
        android:textColor="?attr/textFillColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailVerificationDialogTitle" />

    <TextView
        android:id="@+id/emailVerificationDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/message_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailVerificationDialogSubtitle">

        <EditText
            android:id="@+id/verification_dialog_code_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/verification_dialog_code_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/verification_dialog_code_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/verification_dialog_code_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/verification_dialog_code_num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/verification_dialog_code_num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/empty_code"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/verification_dialog_code_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/didn_t_get_the_code"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_dialog_code_button" />

    <TextView
        android:id="@+id/verification_dialog_code_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/clickable_text"
        android:clickable="true"
        android:textStyle="bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/resend"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/verification_dialog_code_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/verification_dialog_code_snackbar_colayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verification_dialog_code_button"
        app:layout_constraintStart_toStartOf="@+id/verification_dialog_code_button"
        app:layout_constraintTop_toBottomOf="@+id/verification_dialog_code_button" />

</androidx.constraintlayout.widget.ConstraintLayout>